# otto

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  PRODUCT.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: bildstudio-plan.html  otto-presence-stage-plan.html
public/worklets/: capture.js  playback.js
src/: App.tsx  MiniOrb.tsx  PanelApp.tsx  SettingsApp.tsx  SurfaceApp.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/defaults/: MEMORY.md  SOUL.md  STYLE.css  TOOLS.md  USER.md
src-tauri/defaults/skills/: mac-dateisuche.md  mac-kalender-erinnerungen.md  mac-mail-notizen.md  mac-musik.md  mac-shortcuts.md
src-tauri/icons/: icon.icns
src-tauri/src/: agent_files.rs  artifacts.rs  cli.rs  computer_use.rs  context.rs  diagnostics.rs  fs_util.rs  images.rs  lib.rs  logging.rs  main.rs  memory.rs  native.rs  search.rs  sessions.rs  settings.rs  shell_safety.rs  skills.rs  terminal.rs  tray.rs  wake.rs  window_effects.rs
src-tauri/src/computer_use/: actions.rs  permissions.rs  screen.rs
src/components/: ArtifactContent.tsx  ArtifactPanel.tsx  FilesPanel.tsx  Island.tsx  Orb3D.tsx  SettingsPanel.tsx  VoicePanel.tsx
src/components/settings/: SettingsControls.tsx  SettingsSections.tsx
src/hooks/: useActivation.ts  usePanelSync.ts
src/lib/: audio.ts  docs.ts  hudWindow.ts  imagegen.ts  memory.ts  miniMode.ts  pcm.ts  realtime.ts  research.ts  tauriApi.ts  tools.ts  types.ts  updater.ts  vision.ts
