[package]
name = "otto"
version = "0.4.0"
description = "Otto — deutschsprachiger Realtime-Voice-Agent"
authors = ["agent-z"]
edition = "2021"

[lib]
name = "otto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
enigo = "0.6"
base64 = "0.22"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
