[package]
name = "otto"
version = "0.1.7"
description = "Otto — deutschsprachiger Realtime-Voice-Agent"
authors = ["agent-z"]
edition = "2021"

[lib]
name = "otto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
libc = "0.2"
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSGeometry"] }
objc2-app-kit = { version = "0.3", features = ["NSSpeechRecognizer", "NSEvent", "NSScreen"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
window-vibrancy = "0.6"
